[tool.poetry]
name = "speedtest"
version = "1.0.0"
description = "Scripts to test the file transfer speed for UoA"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
speedtest-cli = "^2.1.3"
smbprotocol = "^1.11.0"
python-dotenv = "^1.0.0"
dropbox = "^11.36.2"
PyDrive2 = "^1.17.0"
onedrivesdk = "<2"
boto3 = "^1.28.63"
passpy = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
